--- a/src/index.html
+++ b/src/index.html
@@ -119,6 +119,10 @@
         </svg>
     </div>
 
+    <div class="cards">
+        
+    </div>
+
     <script src="js/bundle.js"></script>
 </body>
 </html>
