--- a/src/index.html
+++ b/src/index.html
@@ -122,6 +122,10 @@
     <div class="cards">
         
     </div>
+    <!-- <div class="spin-wrapper">
+        <div class="spinner">
+        </div>
+    </div> -->
 
     <script src="js/bundle.js"></script>
 </body>
