refactoring and add some functions

--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@
         </svg>
     </div>
 
-    <div class="cards">
+    <div class="modal__container">
         
     </div>
     <!-- <div class="spin-wrapper">
